# stable-diffusion-webui-modal

./: .gitignore  Cargo.toml  README.md  pyproject.toml  stable-diffusion-webui.py
src/: main.rs
